<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddContactActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/avatar"
        android:src="@android:drawable/ic_menu_camera"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTelNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/numTel"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTelNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Prénom -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        app:layout_constraintTop_toBottomOf="@id/textFieldTelNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:layout_margin="16dp"
    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Nom de famille -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        app:layout_constraintTop_toBottomOf="@id/textFieldFirstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@id/textFieldLastname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/textFieldAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/outlined_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textFieldMail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
